--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# IDE stuff
+.vscode/
+
+# Static files
+static/
+yatube/static
+yatube/posts/static
+yatube/media
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -144,9 +153,3 @@ dmypy.json
 .history/
 
 .mypy_cache
-
-# папки со статикой и медиа
-static/
-yatube/posts/static/
-yatube/media/
-
